--- a/particle_filtering_visualization.ipynb
+++ b/particle_filtering_visualization.ipynb
@@ -117,20 +117,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 469,
+   "execution_count": 534,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
     "reload(state.particle_filtering)\n",
-    "particles = state.particle_filtering.Particles(n=1500, where='1base')\n",
+    "particles = state.particle_filtering.Particles(n=1000, where='1base')\n",
     "robot = state.particle_filtering.Robot(30, 40, 0)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 462,
+   "execution_count": 535,
    "metadata": {
     "collapsed": false
    },
@@ -139,7 +139,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1500.02581706\n"
+      "999.995063083\n"
      ]
     }
    ],
@@ -149,16 +149,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 482,
+   "execution_count": 563,
    "metadata": {
     "collapsed": false
    },
    "outputs": [
     {
      "data": {
-      "image/png": "iVBORw0KGgoAAAANSUhEUgAAAQMAAAGKCAYAAAAIbiTbAAAABHNCSVQICAgIfAhkiAAAAAlwSFlz\nAAALEgAACxIB0t1+/AAAFD1JREFUeJzt3W+QXXd93/H3R5Id2xBXMW7lPzJjJZbHViatGYoojQMb\nMpVNxrGdGWrgAajAEKZuazoQiuQHteBJDDMlmdICnQkUlcQqIp54TDJFlj1eAw9sj4NkGwth2a4Y\nS8Fr7JGZGGr9Yb99cH+SrlYr7Uq6f/buvl8zGp0999z7+96zez/3e84959xUFZK0aNgFSJobDANJ\ngGEgqTEMJAGGgaTGMJAEwJJhDJrEzzOlIamqTDd/aJ1BVc2Jf3fcccfQa5jPtUDn31yoZS6tl2HU\n0fldnJibCZIAw0BSs+DDYGxsbNglHGEt07OW4/WjjnS2JQYrSQ1jXA1e2q4qf93D1/ldhJprOxAl\nzS2GgSTAMJDUGAaSAMNAUmMYSAIMA0nNrMIgye4kTyTZluTRNu+CJFuTPJ3kviRLu5Zfn2RXkp1J\n1vSreEm9M9vOoICxqnpTVa1u89YBW6vqSuCB9jNJVgHvAVYB1wNfTGIHIs1xp/IinXrU0o3Axja9\nEbi5Td8EbKqqg1W1G3gGWI2kOe1UOoP7kzyW5CNt3rKqmmjTE8CyNn0JsKfrvnuAS8+4Ukl9NduL\nm/x2Vf0kyT8GtibZ2X1jVdUMFyw57rYNGzYcmR4bG5szJ4BI88n4+Djj4+OzWvaUT1RKcgfwKvAR\nOvsRXkhyMfBgVV2VZB1AVd3Zlv82cEdVPdL1GJ6otEB4otLcccYnKiU5L8mvtunXAWuAJ4F7gbVt\nsbXAPW36XuC9Sc5OsgJYCTx6Jk9CUv/NZjNhGfDX6cTKEuAvq+q+JI8Bm5N8GNgN3AJQVTuSbAZ2\nAIeAW20DpLnP6xmor9xMmDu8noGkWTEMJAGGgaTGMJAEGAaSGsNAEmAYSGoMA0mAYSCpMQwkAYaB\npMYwkAQYBpIaw0ASYBhIagwDSYBhIKkxDCQBhoGkxjCQBBgGkhrDQBJgGEhqDANJgGEgqTEMJAGG\ngaTGMJAEGAaSGsNAEmAYSGoMA0mAYSCpMQwkAYaBpMYwkAQYBpIaw0ASYBhIagwDSQAsGXYBoyjp\nzeNU9eZxpF4wDNSzcNNoMwzOwOm+s/vi01xkGMjNFQHuQJTUGAaSAMNAUmMYSAIMA0mNYSAJMAwk\nNYaBJMAwkNQYBpIAw0BSYxhIAjxR6Yx49qHmEzsDSYCdwWnxlF/NR3YGkoBZhkGSxUm2JflW+/mC\nJFuTPJ3kviRLu5Zdn2RXkp1J1vSrcEm9NdvO4GPADuBwg7wO2FpVVwIPtJ9Jsgp4D7AKuB74YhK7\nD2kEzPhCTbIc+H3gz4HD+89vBDa26Y3AzW36JmBTVR2sqt3AM8DqXhYsqT9m8679p8Angcmuecuq\naqJNTwDL2vQlwJ6u5fYAl55pkZL676RhkOQG4MWq2sbRruAYVVUc3XyYdpHTL0/SoMz00eK/BG5M\n8vvAOcD5Sb4OTCS5qKpeSHIx8GJbfi9wWdf9l7d5x9mwYcOR6bGxMcbGxk7rCUg6sfHxccbHx2e1\nbGqWH5oneQfwx1X1B0k+B7xcVZ9Nsg5YWlXr2g7Eu+jsJ7gUuB+4oqYMkmTqLEl91jliNlTVtF3+\nqR50dPgVfCewOcmHgd3ALQBVtSPJZjqfPBwCbvVVL42GWXcGPR3UzkAauF53BtKCspBORvOAIEmA\nnYF0UvNpa3amLsfOQBJgGEhqDANJgGEgqTEMJAGGgaTGMJAEGAaSGsNAEmAYSGoMA0mAYSCpMQwk\nAYaBpMYwkAQYBpIaw0ASYBhIagwDSYBhIKkxDCQBhoGkxjCQBBgGkhrDQBJgGEhqDANJgGEgqTEM\nJAGGgaTGMJAEGAaSGsNAEmAYSGqWDLuAhSgZzDhVgxlH84OdgSTAzmCofOfWXGJnIAkwDCQ1hoEk\nwDCQ1BgGkgDDQFJjGEgCDANJjWEgCTAMJDWGgSTAMJDUGAaSAMNAUmMYSAIMA0mNYSAJMAwkNYaB\nJMAwkNQYBpKAGcIgyTlJHkmyPcmOJH/S5l+QZGuSp5Pcl2Rp133WJ9mVZGeSNf1+ApJ6IzXD9bqT\nnFdVv0iyBPge8MfAjcBLVfW5JJ8Cfq2q1iVZBdwFvAW4FLgfuLKqJqc8Zs007nx2+EtUFvAq0BB0\n/u5CVU37NT4zbiZU1S/a5NnAYmAfnTDY2OZvBG5u0zcBm6rqYFXtBp4BVp9u8ZIGZ8YwSLIoyXZg\nAniwqp4CllXVRFtkAljWpi8B9nTdfQ+dDkHSHDfjNyq1Fv+aJP8I2JLkd6fcXklO1vDaDEsjYNZf\nr1ZVP0vyt8CbgYkkF1XVC0kuBl5si+0FLuu62/I27zgbNmw4Mj02NsbY2NipVS5pRuPj44yPj89q\n2ZPuQExyIXCoql5Jci6wBfg0cB3wclV9Nsk6YOmUHYirOboD8Yqpewvdgdj5fwGvAg3BTDsQZ+oM\nLgY2JllEZ//C16vqgSTbgM1JPgzsBm4BqKodSTYDO4BDwK0L+lUvjZAZP1rsy6BJuSvBzkCDdcYf\nLUpaGGa9A7HXfFeU5hY7A0mAYSCpMQwkAYaBpMYwkAQYBpIaw0ASMMTjDDQ8mfb4s/7yuJK5z85A\nEmBnsKAN4t16GF2ITo+dgSTAMJDUGAaSAMNAUmMYSAIMA0mNYSAJMAwkNYaBJMAwkNQYBpIAw0BS\nYxhIAgwDSY1hIAkwDCQ1hoEkwDCQ1HjZswXMS5Kpm52BJMDOYEHysuWajp2BJMAwkNQYBpIAw0BS\nYxhIAgwDSY1hIAkwDCQ1hoEkwDCQ1Hg4shYET8qamZ2BJMDOQAvMQj5Ja6buyM5AEmAYSGoMA0mA\nYSCpMQwkAYaBpMYwkAQYBpIaw0ASYBhIagwDSYBhIKkxDCQBhoGkxjCQBMwiDJJcluTBJE8l+UGS\n29r8C5JsTfJ0kvuSLO26z/oku5LsTLKmn09AUm+kZrjaQ5KLgIuqanuS1wN/B9wMfBB4qao+l+RT\nwK9V1bokq4C7gLcAlwL3A1dW1WTXY9ZM40q9dPjCHgv5z66zDkJVTXuZkxk7g6p6oaq2t+lXgR/S\neZHfCGxsi22kExAANwGbqupgVe0GngFWn8FzkDQAp7TPIMnlwJuAR4BlVTXRbpoAlrXpS4A9XXfb\nQyc8JM1hs74GYttEuBv4WFX9Q7ouqFZVleRkDdhxt23YsOHI9NjYGGNjY7MtRdIsjY+PMz4+Pqtl\nZ9xnAJDkLOBvgP9TVX/W5u0ExqrqhSQXAw9W1VVJ1gFU1Z1tuW8Dd1TVI12P5z4DDZT7DHqwzyCd\nFuArwI7DQdDcC6xt02uBe7rmvzfJ2UlWACuBR0+vfEmDMptPE64FvgM8wdF2fz2dF/hm4I3AbuCW\nqnql3ed24EPAITqbFVumPKadgQbKzmDmzmBWmwm9Zhho0AyDHmwmSFoYDANJgGEgqTEMJAGGgaTG\nb2HWnDHTtwSrv+wMJAF2BppDFvIxAHOBnYEkwDCQ1BgGkgDDQFJjGEgCDANJjWEgCTAMJDWGgSTA\nMJDUGAaSAMNAUmMYSAIMA0mNYSAJMAwkNYaBJMAwkNQYBpIAw0BSYxhIAgwDSY1hIAkwDCQ1hoEk\nwDCQ1BgGkgDDQFJjGEgCDANJjWEgCTAMJDWGgSTAMJDULBnWwMmwRu6PqmFXIJ0ZOwNJwBA7A99J\npbnFzkASYBhIagwDSYBhIKkxDCQBhoGkxjCQBBgGkhrDQBIwxCMQpUHq5bkw8/XoWTsDSYCdgRaY\nM3lXn29n2k5lZyAJMAwkNYaBJMAwkNTMGAZJvppkIsmTXfMuSLI1ydNJ7kuytOu29Ul2JdmZZE2/\nCpfUW7PpDP4ncP2UeeuArVV1JfBA+5kkq4D3AKvafb6YxO5DGgEzvlCr6rvAvimzbwQ2tumNwM1t\n+iZgU1UdrKrdwDPA6t6UKqmfTvdde1lVTbTpCWBZm74E2NO13B7g0tMcQ9IAnfFBR1VVSU52KMe0\nt23YsOHI9NjYGGNjY2daiqQpxsfHGR8fn9WyqVkckpXkcuBbVfVb7eedwFhVvZDkYuDBqroqyTqA\nqrqzLfdt4I6qemTK49VsxpV65fDRg704AnFU/3Q79YeqmvZYytPdTLgXWNum1wL3dM1/b5Kzk6wA\nVgKPnuYYkgZoxs2EJJuAdwAXJnke+M/AncDmJB8GdgO3AFTVjiSbgR3AIeBWWwBpNMxqM6Hng7qZ\nMGf0++SbufJrdjNh5s0Ez1rUgjLfzzw8E4aBgNF9t1PvGAZaEAy7mXmosCTAMJDUGAaSAMNAUmMY\nSAIMA0mNYSAJMAwkNYaBJMAwkNQYBpIAw0BSYxhIAgwDSY1hIAkwDCQ1hoEkwDCQ1BgGkgDDQFJj\nGEgCDANJzUiHwYEDB5icnDxm3uOPP87SpUt56aWXhlSVNJpGNgySsHr1ahYtOvoUrr32Wq655hpe\nffVVLrzwwiFWJ42ekfsSlXR9P9YVV1xxzG27du1i8eLF/PznPx90WdLIG7kvXu0Og+eff57ly5f3\nqqwFadS/TFSzN9MXr47sZkJVzRgEb3zjG3n55ZcHVJE02kYuDKqKyclJDhw4cMJl1q1bRxKef/55\n3vCGNwywOml0jVwYPPfcc3zgAx/gG9/4xgmX2bp1KwC33nrroMqSRt5I7TOYnJzkrW99K3v37mXN\nmjV87WtfO+b273znO/zKryznxz/+dd797sljPmnQ9NxnsHDMq30GSfjMZz7Dvn37uO6664657e67\n7+bd7/4f3HzT5fyTpx40CKRTNFIfLSbhuuuuY/v27SxevPjI/P374UtfuoKf/vQv+Y0lP+Yd/3Tf\nEKuURtPIvX0m4aqrrmLlypV8/vOf5/vf/39c+IZdPPDAPwPgg+dsIjf+wZCrlEbPSHUGwDHt/7nn\n/kfe8s/3M1krAQiTrP03gbPOGlZ50sgauc7gqNfxrVvfx2/W00fmrGELj/362dx1111H5u3fv9/z\nFKRZGNkwOI+f8zP+nh38Jst5HoA381X+8OMf5/zzzwfg2WefPe6QZUnTG6mPFtt929QyzmYbSzif\ne3grf8En2ccf8S0OcPixV61axWuvvcZzzz3Xo8rnHz9aXDjm1UeLRy3mHL7BAS7mT/kj/i1PMcZH\n2ZKDvP/97z+y1O233873vve9IdYpjY6R6wy2bNnCzdffDnyXD/FV/vvfrCA33MAjDz3E6re/vXsM\nAIbx/EaJncHCMVNnMHJhAHBtwn/lKjbzHHfW/mNue/jhh3nb294GeFbjbBgGC8dMYTByHy0efsf/\n1+zk76Y5I7H7kwODQJq9kesMuq9nAG4GnCk7g4Vj3u1AnPrif+2113jnO995wuV/9KMfnfQMR0kd\nI7eZ0G3lypWce+65LF68mF/+8pfHnK8wOTnJlVdeybPPPstDDz00xCql0TCSYXC4Ozi8yXDbbbcd\nEwQAr7zyCnv37uXqq6/m7V2fMkia3kiGwWFf+MIX2L9/P5/4xCeOzJucnOSjH/0o3/zmN73SkXQK\nRm4H4kwOHjzIihUruOGGG/jyl7/clzHmE3cgLhzz8jiDmRw6dIhFixZ5gZNZMAwWjnl3nMFsLFky\nL5+W1Fe+dUoCDANJjWEgCTAMJDWGgSTAMJDUGAaSAMNAUtOXMEhyfZKdSXYl+VQ/xpDUWz0PgySL\ngf8GXA+sAt6X5Opej9Mr4+Pjwy7hCGuZnrUcrx919KMzWA08U1W7q+og8L+Bm/owTk/MlV8uWMuJ\nWMvxRiUMLoX2rSYde9o8SXNYP87omdX5b5n2vKnh+PSnh13BUcOqZbrfh+tlenOlll7X0fNTmJP8\nC2BDVV3ffl4PTFbVZ7uW8YRZaUgGdj2DJEuAHwG/B/w98Cjwvqr6YU8HktRTPd9MqKpDSf49sAVY\nDHzFIJDmvqFc6UjS3DPwIxCHeUBSkt1JnkiyLcmjbd4FSbYmeTrJfUmW9mnsryaZSPJk17wTjp1k\nfVtHO5OsGUAtG5LsaetmW5J3DaiWy5I8mOSpJD9IclubP/B1c5JaBr5ukpyT5JEk25PsSPInbX7/\n1ktVDewfnc2GZ4DLgbOA7cDVAxz//wIXTJn3OeA/telPAXf2aezfAd4EPDnT2HQO1tre1tHlbZ0t\n6nMtdwAfn2bZftdyEXBNm349nf1NVw9j3ZyklmGtm/Pa/0uAh4Fr+7leBt0ZzIUDkqbuSb0R2Nim\nNwI392PQqvousG+WY98EbKqqg1W1m84vdnWfa4Hj180ganmhqra36VeBH9I5LmXg6+YktcBw1s0v\n2uTZdN5I99HH9TLoMBj2AUkF3J/ksSQfafOWVdVEm54Alg2wnhONfQmddXPYoNbTf0jyeJKvdLWf\nA6slyeV0OpZHGPK66arl4TZr4OsmyaIk2+k8/wer6in6uF4GHQbD3lv521X1JuBdwL9L8jvdN1an\n3xpKjbMYu991fQlYAVwD/AT4L4OsJcnrgbuBj1XVPxwz2IDXTavlr1otrzKkdVNVk1V1DbAceHuS\n351ye0/Xy6DDYC9wWdfPl3FsmvVVVf2k/f9T4K/ptFETSS4CSHIx8OKg6jnJ2FPX0/I2r2+q6sVq\ngD/naIvZ91qSnEUnCL5eVfe02UNZN121/MXhWoa5btr4PwP+FngzfVwvgw6Dx4CVSS5PcjbwHuDe\nQQyc5Lwkv9qmXwesAZ5s469ti60F7pn+EfriRGPfC7w3ydlJVgAr6Ry81TftD+uwP6SzbvpeS5IA\nXwF2VNWfdd008HVzolqGsW6SXHh4cyTJucC/ArbRz/XSqz2fp7CH9F109tI+A6wf4Lgr6Oxt3Q78\n4PDYwAXA/cDTwH3A0j6Nv4nOEZkH6Ow3+eDJxgZub+toJ3Bdn2v5EPC/gCeAx9sf2LIB1XItMNl+\nL9vav+uHsW5OUMu7hrFugN8Cvt9qeQL45Ex/r2daiwcdSQK87JmkxjCQBBgGkhrDQBJgGEhqDANJ\ngGEgqTEMJAHw/wGF0yMih8d8cwAAAABJRU5ErkJggg==\n",
+      "image/png": "iVBORw0KGgoAAAANSUhEUgAAAQMAAAGKCAYAAAAIbiTbAAAABHNCSVQICAgIfAhkiAAAAAlwSFlz\nAAALEgAACxIB0t1+/AAAFcJJREFUeJzt3X+M3XWd7/HnuzOt0oKWRm1LKdsGQWiyUhdtvCB3D7nS\nbTeXQsOmuGoCasxGXHEl3Wu7JjBm2SwSr5Lmxh/rj2vFpdqANOzdXG0LPbCGawncaUHGyo+12S3S\nqdWWVDDbH/PeP85nyukw7Rza86szz0cyme/5nu85n/d8Zs7rfL6f8zlnIjORpEmdLkBSdzAMJAGG\ngaTCMJAEGAaSCsNAEgC9nWg0Inw9U+qQzIzR9ndsZJCZXfF12223dbyG8VwL1L66oZZu6pdO1FH7\nXRyfpwmSAMNAUjHhw6BSqXS6hKOsZXTW8lqtqCNq5xLtFRHZiXbVflGmqvx1d17tdxFkt00gSuou\nhoEkwDCQVBgGkgDDQFJhGEgCDANJRUNhEBE7I+LJiOiPiMfKvhkRsSkinomIjRExve741RHxbETs\niIjFrSpeUvM0OjJIoJKZ78rMRWXfKmBTZl4IPFguExELgOuBBcAS4CsR4QhE6nKv50E6ctXSMmBt\n2V4LXFu2rwHWZeahzNwJPAcsQlJXez0jg80R8XhEfLzsm5mZg2V7EJhZts8BdtXddhcw55QrldRS\njX64yeWZ+WJEvBXYFBE76q/MzBzjA0tec11fX9/R7Uql0jVvAJHGk2q1SrVabejY1/1GpYi4Dfgd\n8HFq8wi7I2I2sCUzL4qIVQCZeUc5/kfAbZm5te4+fKPSBOEblbrHKb9RKSKmRsRZZXsasBh4CngA\nuKEcdgOwoWw/AHwgIqZExHzgAuCxU/khJLVeI6cJM4H7oxYrvcA/ZubGiHgcWB8RHwN2AisAMnMg\nItYDA8Bh4CaHAVL38/MM1FKeJnQPP89AUkMMA0mAYSCpMAwkAYaBpMIwkAQYBpIKw0ASYBhIKgwD\nSYBhIKkwDCQBhoGkwjCQBBgGkgrDQBJgGEgqDANJgGEgqTAMJAGGgaTCMJAEGAaSCsNAEmAYSCoM\nA0mAYSCpMAwkAYaBpMIwkAQYBpIKw0ASYBhIKgwDSYBhIKkwDCQBhoGkwjCQBBgGkgrDQBIAvZ0u\n4HQU0Zz7yWzO/UjNYBioaeGm05thcApO9pndB5+6kWEgT1cEOIEoqTAMJAGGgaTCMJAEGAaSCsNA\nEmAYSCoMA0mAYSCpMAwkAYaBpMIwkAT4RqVT4rsPNZ44MpAEODI4Kb7lV+ORIwNJQINhEBE9EdEf\nEf9ULs+IiE0R8UxEbIyI6XXHro6IZyNiR0QsblXhkpqr0ZHBp4EBYHiAvArYlJkXAg+Wy0TEAuB6\nYAGwBPhKRDj6kE4DYz5QI+Jc4E+BbwLD8+fLgLVley1wbdm+BliXmYcycyfwHLComQVLao1GnrW/\nDPw1MFS3b2ZmDpbtQWBm2T4H2FV33C5gzqkWKan1ThgGEfHfgT2Z2c+ro4JjZGby6unDqIecfHmS\n2mWslxYvA5ZFxJ8CbwTeFBF3A4MRMSszd0fEbGBPOf4FYG7d7c8t+16jr6/v6HalUqFSqZzUDyDp\n+KrVKtVqtaFjIxt80Twi/hhYmZlXR8SdwG8y8wsRsQqYnpmrygTiPdTmCeYAm4G354hGImLkLkkt\nVlsxG2TmqKP817voaPgRfAewPiI+BuwEVgBk5kBErKf2ysNh4CYf9dLpoeGRQVMbdWQgtV2zRwbS\nhDKR3ozmgiBJgCMD6YTG09nsWKMcRwaSAMNAUmEYSAIMA0mFYSAJMAwkFYaBJMAwkFQYBpIAw0BS\nYRhIAgwDSYVhIAkwDCQVhoEkwDCQVBgGkgDDQFJhGEgCDANJhWEgCTAMJBWGgSTAMJBUGAaSAMNA\nUmEYSAIMA0mFYSAJMAwkFYaBJMAwkFQYBpIAw0BS0dvpAiaiiPa0k9medjQ+ODKQBDgy6CifudVN\nHBlIAgwDSYVhIAkwDCQVhoEkwDCQVBgGkgDDQFJhGEgCDANJhWEgCTAMJBWGgSTAMJBUGAaSAMNA\nUmEYSAIMA0mFYSAJMAwkFYaBJGCMMIiIN0bE1ojYFhEDEfH3Zf+MiNgUEc9ExMaImF53m9UR8WxE\n7IiIxa3+ASQ1R+QYn9cdEVMz85WI6AV+AqwElgF7M/POiPgscHZmroqIBcA9wHuAOcBm4MLMHBpx\nnzlWu+PZ8D9RmcBdoA6o/d0FmTnqv/EZ8zQhM18pm1OAHmAftTBYW/avBa4t29cA6zLzUGbuBJ4D\nFp1s8ZLaZ8wwiIhJEbENGAS2ZObTwMzMHCyHDAIzy/Y5wK66m++iNkKQ1OXG/I9KZYi/MCLeDPw4\nIq4ccX1GxIkGvA6GpdNAw/9eLTNfioh/Bi4FBiNiVmbujojZwJ5y2AvA3LqbnVv2vUZfX9/R7Uql\nQqVSeX2VSxpTtVqlWq02dOwJJxAj4i3A4czcHxFnAD8GPg/8CfCbzPxCRKwCpo+YQFzEqxOIbx85\nW+gEYu37BO4CdcBYE4hjjQxmA2sjYhK1+YW7M/PBiOgH1kfEx4CdwAqAzByIiPXAAHAYuGlCP+ql\n08iYLy22pNGIdCrBkYHa65RfWpQ0MTQ8gdhsPitK3cWRgSTAMJBUGAaSAMNAUmEYSAIMA0mFYSAJ\n6OA6A3VOjLr+rLVcV9L9HBlIAhwZTGjteLbuxChEJ8eRgSTAMJBUGAaSAMNAUmEYSAIMA0mFYSAJ\nMAwkFYaBJMAwkFQYBpIAw0BSYRhIAgwDSYVhIAkwDCQVhoEkwDCQVPixZxOYH0mmeo4MJAGODCYk\nP7Zco3FkIAkwDCQVhoEkwDCQVBgGkgDDQFIx7l9avP9+uOce+I//gIMHa9/rt//2b+HaaztdpdR5\n4z4Mli+HyZPhk5+Ef/u3Y69bsAD+4A9gaAgmOUbSBBfZgRUoEZHtbvfll6GvD778ZThy5Njr3vpW\nuOqq2teKFTB1altLk9qitvw8yMxRF6JPmDAYtn07/MVfwNat8LWvwbPPwsaN8NRTtRHEvn0wbVpH\nSpNayjAYxZEj8A//AOefD4sX1/a9+GItKJYs6VhZaiHflDXMMNAEZxgMO34YjPsJRKneRH4OGisQ\nnUOXBEzAMMhMNm3axK9//etOlyJ1lXEfBocPH2ZoaOiYfVu2bGHu3LmsWbOmQ1VJ3Wfch8HQ0BDX\nXXcdN954I7/61a+ICG655RbOO+88fvCDH9Df39/pEqWuMG5fTdi7dy8/+clPOPfcc3n44YdZvXo1\n8+fP50Mf+hADAwNccsklvPe972XOnDk8//zzAFx66aW87W1va2ld6ozhyTMnECfoS4uf+9zn+NKX\nvsSVV17Jtm3bePHFFwHo6enhyJEjzJ8/n3e/+90cPHiQRx55hIsuuoj77ruP2bNnt7w2tZdhMHYY\njJvThMzkt7/9LZs3b+bqq69m0aJFXHbZZaxYsYLHH3+cvXv3Hj32SFmP3NPTw3333ccTTzzBWWed\nxbRp09iwYUOnfgSpo8bNyGD79u185jOfob+/n97eXoaGhpg1axYvvPACL7300nFvN23aNBYuXMjv\nf/97+vv7ufnmm3nppZdYs2YNZ511VlNrVOc4MphAI4NLLrmEhx56iHvvvZfJkyezf/9+BgYGThgE\nAC+//DLPP/8873//+znjjDPYunUr27dv5957721T5VJ3GDdhMOyCCy7gE5/4BOedd17Dt9m9ezdX\nXXUVK1euZOrUqfzwhz9kz549uGRaE8m4OU3ITL7//e/zjW98g61bt/LKK680fNvLLruMBQsWcOed\ndzJt2jR6e3uZ5AccjCueJox9mjAu3puwf/9+Vq5cyd13383BgweP7l8M3AG8AThcvo7UbX8NuAd4\n9NFHOfvsszn77LPbXrvULcbF09/06dP5+te/ztVXX83kyZOP7t8I/BnwG+CdwB8B7wH+C/A2YEvd\nfezbt49f/vKX7Sta6jLjYmSwd+9e7rrrLh566CEOHz58zHX/ClSAvwL+Dnhj2f8OYBfwU+B+4NKl\nS3nzm9/ctpqlbnPazxlkJuvWreOWW25hcHDwhMcuANYC7wY+SS0klgJnAkd6eujZvx/OPLMpdam7\nOGfQhJcWI2JuRGyJiKcj4mcRcXPZPyMiNkXEMxGxMSKm191mdUQ8GxE7ImJxs36Y0Tz88MOsWbPm\nmEVFxzNA7RThVuAxYAXwVuDGGTP4f8uWGQSa0MYcGUTELGBWZm6LiDOBJ4BrgY8AezPzzoj4LHB2\nZq6KiAXU5uXeA8wBNgMXZuZQ3X029dWEX/ziF1xxxRUn9bbkGTNm8L3vfY+lS5c2rR51H0cGTRgZ\nZObuzNxWtn8H/Jzag3wZtVE35fvwfx+4BliXmYcycyfwHLDoFH6GMb3jHe9gcHCQm266iSlTpjR8\nuzPOOIMvfvGLXH755S2sTjo9vK5XEyJiHvAuYCswMzOHT9IHgZll+xxqc3PDdlELj5b67ne/yxNP\nPHHMS4sncv755/Od73yHiy++mDe96U0trk7qfg2/mlBOEe4DPp2ZB6LuA9UyMyPiRAOw11zX19d3\ndLtSqVCpVBot5RgHDx7kwx/+MBs2bGDKlClH35FYr6enh0mTJnHo0CEApkyZwhve8AZuv/12pk2b\nxnXXXcfKlStPqn2pm1WrVarVakPHNvRqQkRMBv4P8H8z866ybwdQyczdETEb2JKZF0XEKoDMvKMc\n9yPgtszcWnd/TV+BeODAAdavX8/999/PgQMH2LNnD+985zvp7e2lp6eHBx98kOuvv56lS5cyb948\nbr31Vh599FGWL1/OjTfeyMKFC5taj7qLcwZN+DyDqA0B1gK/yczP1O2/s+z7QgmA6SMmEBfx6gTi\n2+sf/a0Ig/7+fj71qU+xa9culi9fTk9PD7Nnz+aDH/wgAE8++SRXXHEFU8u/Szpw4ACPPPLI0YlD\nlx+Pb4ZBc8LgfcAjwJO8OtxfTe3VufXAecBOYEVm7i+3+Rvgo9RW/X46M3884j5b9uEmTz/9NF/9\n6lc5cOAAt99+O3Pnzm1JOzq9GAYT/JOOpGGGwQT6PANJp8YwkAQYBpIKw0ASYBhIKsbF5xlofPDf\npneWIwNJgCMDdZGJvAagGzgykAQYBpIKw0ASYBhIKgwDSYBhIKkwDCQBhoGkwjCQBBgGkgrDQBJg\nGEgqDANJgGEgqTAMJAGGgaTCMJAEGAaSCsNAEmAYSCoMA0mAYSCpMAwkAYaBpMIwkAQYBpIKw0AS\nYBhIKgwDSYBhIKkwDCQBhoGkwjCQBBgGkoreTjUc0amWWyOz0xVIp8aRgSSggyMDn0ml7uLIQBJg\nGEgqDANJgGEgqTAMJAGGgaTCMJAEGAaSCsNAEtDBFYhSOzXzvTDjdfWsIwNJgCMDTTCn8qw+3t5p\nO5IjA0mAYSCpMAwkAYaBpGLMMIiIb0fEYEQ8VbdvRkRsiohnImJjREyvu251RDwbETsiYnGrCpfU\nXI2MDP43sGTEvlXApsy8EHiwXCYiFgDXAwvKbb4SEY4+pNPAmA/UzPwXYN+I3cuAtWV7LXBt2b4G\nWJeZhzJzJ/AcsKg5pUpqpZN91p6ZmYNlexCYWbbPAXbVHbcLmHOSbUhqo1NedJSZGREnWsox6nV9\nfX1HtyuVCpVK5VRLkTRCtVqlWq02dGxkA0uyImIe8E+Z+Yfl8g6gkpm7I2I2sCUzL4qIVQCZeUc5\n7kfAbZm5dcT9ZSPtSs0yvHqwGSsQT9c/3Vr9QWaOupbyZE8THgBuKNs3ABvq9n8gIqZExHzgAuCx\nk2xDUhuNeZoQEeuAPwbeEhH/DtwK3AGsj4iPATuBFQCZORAR64EB4DBwk0MA6fTQ0GlC0xv1NKFr\ntPrNN93ya/Y0YezTBN+1qAllvL/z8FQYBgJO32c7NY9hoAnBsBubS4UlAYaBpMIwkAQYBpIKw0AS\nYBhIKgwDSYBhIKkwDCQBhoGkwjCQBBgGkgrDQBJgGEgqDANJgGEgqTAMJAGGgaTCMJAEGAaSCsNA\nEmAYSCoMA0mAYSCpMAwkAYaBpMIwkAQYBpIKw0ASYBhIKgwDSYBhIKkwDCQBhoGkwjCQBBgGkgrD\nQBJgGEgqDANJgGEgqTAMJAGGgaTCMJAEGAaSCsNAEmAYSCoMA0mAYSCpMAwkAYaBpMIwkAQYBpIK\nw0ASYBhIKgwDSYBhIKkwDCQBLQqDiFgSETsi4tmI+Gwr2pDUXE0Pg4joAf4XsARYAPx5RFzc7Haa\npVqtdrqEo6xldNbyWq2ooxUjg0XAc5m5MzMPAd8HrmlBO03RLb9csJbjsZbXOl3CYA7w73WXd5V9\nkrpYbwvuMxs5KKIFLZ+kz3++0xW8qlO1jPb7sF9G1y21NLuOyGzosdv4HUa8F+jLzCXl8mpgKDO/\nUHdMcxuV1LDMHPWpuBVh0Av8AvhvwK+Ax4A/z8yfN7UhSU3V9NOEzDwcEX8J/BjoAb5lEEjdr+kj\nA0mnp7avQOzkgqSI2BkRT0ZEf0Q8VvbNiIhNEfFMRGyMiOktavvbETEYEU/V7Ttu2xGxuvTRjohY\n3IZa+iJiV+mb/ohY2qZa5kbEloh4OiJ+FhE3l/1t75sT1NL2vomIN0bE1ojYFhEDEfH3ZX/r+iUz\n2/ZF7bThOWAeMBnYBlzcxvZ/CcwYse9O4H+U7c8Cd7So7SuAdwFPjdU2tcVa20ofzSt9NqnFtdwG\n3DLKsa2uZRawsGyfSW2+6eJO9M0JaulU30wt33uBnwLva2W/tHtk0A0LkkbOpC4D1pbttcC1rWg0\nM/8F2Ndg29cA6zLzUGbupPaLXdTiWuC1fdOOWnZn5ray/Tvg59TWpbS9b05QC3Smb14pm1OoPZHu\no4X90u4w6PSCpAQ2R8TjEfHxsm9mZg6W7UFgZhvrOV7b51Drm2Ht6qdPRcT2iPhW3fCzbbVExDxq\nI5atdLhv6mr5adnV9r6JiEkRsY3az78lM5+mhf3S7jDo9Gzl5Zn5LmAp8MmIuKL+yqyNtzpSYwNt\nt7qurwLzgYXAi8D/bGctEXEmcB/w6cw8cExjbe6bUsu9pZbf0aG+ycyhzFwInAv814i4csT1Te2X\ndofBC8DcustzOTbNWiozXyzffw3cT20YNRgRswAiYjawp131nKDtkf10btnXMpm5Jwvgm7w6xGx5\nLRExmVoQ3J2ZG8rujvRNXS3fG66lk31T2n8J+GfgUlrYL+0Og8eBCyJiXkRMAa4HHmhHwxExNSLO\nKtvTgMXAU6X9G8phNwAbRr+Hljhe2w8AH4iIKRExH7iA2uKtlil/WMOWU+ubltcSEQF8CxjIzLvq\nrmp73xyvlk70TUS8Zfh0JCLOAK4C+mllvzRr5vN1zJAupTZL+xywuo3tzqc227oN+Nlw28AMYDPw\nDLARmN6i9tdRW5F5kNq8yUdO1DbwN6WPdgB/0uJaPgp8F3gS2F7+wGa2qZb3AUPl99JfvpZ0om+O\nU8vSTvQN8IfA/y+1PAn89Vh/r6dai4uOJAF+7JmkwjCQBBgGkgrDQBJgGEgqDANJgGEgqTAMJAHw\nn9/h0HmfLrQDAAAAAElFTkSuQmCC\n",
       "text/plain": [
-       "<matplotlib.figure.Figure at 0x10fa7fb10>"
+       "<matplotlib.figure.Figure at 0x10e749910>"
       ]
      },
      "metadata": {},
@@ -168,20 +168,20 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1276.56939233\n"
+      "498.441450034\n"
      ]
     }
    ],
    "source": [
     "for i in xrange(1):\n",
-    "    factor = 6\n",
+    "    factor = -10\n",
     "    robot.rotate(pi/factor)\n",
     "    particles.rotate(pi/factor)\n",
     "    particles.sense(robot.measurement_prediction())\n",
-    "#     distance = 5.0\n",
-    "#     robot.forward(distance)\n",
-    "#     particles.forward(distance)\n",
-    "#     particles.sense(robot.measurement_prediction())\n",
+    "    distance = 10.0\n",
+    "    robot.forward(distance)\n",
+    "    particles.forward(distance)\n",
+    "    particles.sense(robot.measurement_prediction())\n",
     "    figure = plot(particles, robot)\n",
     "    plt.show(figure)\n",
     "    particles.resample()"
@@ -523,12 +523,70 @@
    },
    "outputs": [],
    "source": [
-    "data_00_10 = np.load('data_0_10.dat.npy')\n",
     "data_10_20 = np.load('data_10_20.dat.npy')\n",
     "data_20_30 = np.load('data_20_30.dat.npy')\n",
     "data_30_40 = np.load('data_30_40.dat.npy')\n",
     "raycasting_distances = np.concatenate([data_00_10[0:10],data_10_20[10:20],data_20_30[20:30],data_30_40[30:40]])\n",
     "np.save(\"raycasting_distances\", raycasting_distances)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 596,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "6"
+      ]
+     },
+     "execution_count": 596,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data = []\n",
+    "for i in xrange(8):\n",
+    "    data.append(np.load('bin2/data_' + str(i*20) + '_' + str((i+1)*20) + '.dat.npy')[i*20:(i+1)*20])\n",
+    "raycasting_distances_bin2 = np.concatenate(data)\n",
+    "raycasting_distances_bin2\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 597,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "np.save(\"raycasting_distances_bin2\", raycasting_distances_bin2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 582,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 7, 21], dtype=uint8)"
+      ]
+     },
+     "execution_count": 582,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "raycasting_distances[3][3][126]"
    ]
   },
   {
