--- a/particle_filtering_visualization.ipynb
+++ b/particle_filtering_visualization.ipynb
@@ -635,7 +635,8 @@
    "cell_type": "code",
    "execution_count": 202,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "scrolled": true
    },
    "outputs": [
     {
@@ -655,7 +656,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 12,
    "metadata": {
     "collapsed": false
    },
@@ -663,72 +664,18 @@
     {
      "data": {
       "text/plain": [
-       "array([ 0.,  2.])"
+       "'/collect_front_IR_and_sonar_measurements0.csv'"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "np.average(np.multiply(np.arange(5),np.concatenate([np.zeros((5,1)), np.ones((5,1))], axis=1).T), axis = 1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 41,
-   "metadata": {
-    "collapsed": false,
-    "scrolled": true
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.0"
-      ]
-     },
-     "execution_count": 41,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "np.average(np.multiply(np.arange(5),np.zeros((5,1))))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "import datetime"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'1, 1.1, 5'"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "'{}, {}, {}'.format('1', 1.1, 5)"
+    "i = 0\n",
+    "path = '/'\n",
+    "'{}collect_front_IR_and_sonar_measurements{}.csv'.format(path,i)"
    ]
   }
  ],
